workspace = { members = ["day-1", "day-10", "day-11", "day-13", "day-14", "day-2", "day-20", "day-3", "day-4", "day-7", "day-8", "day-9"] }
[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
debug = true
